--- a/2.html
+++ b/2.html
@@ -1,53 +1,51 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WEB - html</title>
-    <style>
-      a {
-        color:black;
-        text-decoration: none;
-      }
-      h1 {
-        font-size:45px;
-        text-align: center;
-      }
-    </style><!-- css는 스타일태그를 사용하고 헤드태그 아래에 삽입된다.
-    이유는 헤드는 페이지의 전체정보를 표시하는 태그이니까 스타일은 문서의 전체스타일을 정하는 것이기때문에 헤드 밑에 들어간다.
-  태그를 지정하면 그 그 태그가 걸린 모든 문서가 편집된다. 예를 들어 a태그를 지정하면 모든 a태그에 대해 변경한다.
-    -->
-  </head>
-  <body>
-    <h1><a href= "index.html">WEB<a/></h1>
-    <ol>
-      <li><a href= "1.html">HTML<a/></li>
-      <li><a href= "2.html">CSS<a/></li>
-      <li><a href= "2.html" style="color:red;text-decoration:underline">CSS<a/></li>
-      <li><a href= "3.html">JavaScript<a/></li>
-    </ol>
-    <h2>CSSL</h2>
-    <p>
-      종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
-    </p>
-    <p><div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web1-bos8ijvaeo.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
 
+<!doctype html>
+<html>
+<head>
+  <title>WEB - CSS</title>
+  <meta charset="utf-8">
+  <style>
+    #active {
+      color:red;
+    }
+    .saw {
+      color:gray;
+    }
+    a {
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+  <p>
+    css는 스타일태그를 사용하고 헤드태그 아래에 삽입된다.<br>
+    이유는 헤드는 페이지의 전체정보를 표시하는 태그이니까 스타일은 문서의 전체스타일을 정하는 것이기때문에 헤드 밑에 들어간다.<br>
+    태그를 지정하면 그 그 태그가 걸린 모든 문서가 편집된다. 예를 들어 a태그를 지정하면 모든 a태그에 대해 변경한다.
+  </p>
+  <p>
+    css 선택자의 포인트<br>
+    포괄적인것부터 세부적인것으로 부모에서 자식으로 가는 느낌
+    <ol>
+      <li>기본태그</li>
+      <li>클래스</li>
+      <li>아이디</li>
+    </ol>
+
+  </p>
+  </p>
   </body>
-</html>
+  </html>
