--- a/2.html
+++ b/2.html
@@ -5,11 +5,9 @@
   <title>WEB - CSS</title>
   <meta charset="utf-8">
   <style>
-    #active {
-      color:red;
-    }
-    .saw {
-      color:gray;
+    #grid{
+      display: grid;
+      grid-template-columns: 200px 1fr;
     }
     a {
       color:black;
@@ -22,7 +20,7 @@
       margin: 0px;
       padding: 20px;
     }
-    ol{
+    #grid ol{
       border-right: 1px grey solid;
       width: 100px;
       margin: 0px;
@@ -36,30 +34,34 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html" class="saw">HTML</a></li>
-    <li><a href="2.html" class="saw" id="active">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>CSS</h2>
-  <p>
-    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
-  </p>
-  <p>
-    css는 스타일태그를 사용하고 헤드태그 아래에 삽입된다.<br>
-    이유는 헤드는 페이지의 전체정보를 표시하는 태그이니까 스타일은 문서의 전체스타일을 정하는 것이기때문에 헤드 밑에 들어간다.<br>
-    태그를 지정하면 그 그 태그가 걸린 모든 문서가 편집된다. 예를 들어 a태그를 지정하면 모든 a태그에 대해 변경한다.
-  </p>
-  <p>
-    <xmp>
-    css 선택자의 포인트
-    포괄적인것부터 세부적인것으로 부모에서 자식으로 가는 느낌
+  <div id="grid">
     <ol>
-      <li>기본태그</li>
-      <li>클래스</li>
-      <li>아이디</li>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
     </ol>
-    </xmp>
-  </p>
+    <div>
+      <h2>CSS</h2>
+      <p>
+        Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+      </p>
+      <p>
+        css는 스타일태그를 사용하고 헤드태그 아래에 삽입된다.<br>
+        이유는 헤드는 페이지의 전체정보를 표시하는 태그이니까 스타일은 문서의 전체스타일을 정하는 것이기때문에 헤드 밑에 들어간다.<br>
+        태그를 지정하면 그 그 태그가 걸린 모든 문서가 편집된다. 예를 들어 a태그를 지정하면 모든 a태그에 대해 변경한다.
+      </p>
+      <p>
+        <xmp>
+        css 선택자의 포인트
+        포괄적인것부터 세부적인것으로 부모에서 자식으로 가는 느낌
+        <ol>
+          <li>기본태그</li>
+          <li>클래스</li>
+          <li>아이디</li>
+        </ol>
+        </xmp>
+      </p>
+    </div>
+  </div>
   </body>
   </html>
