--- a/2.html
+++ b/2.html
@@ -35,13 +35,18 @@
 <body>
 
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" name="" value="night" onclick="
-  document.querySelector('body').style.backgroundColor = 'black';
-  document.querySelector('body').style.color = 'white';
-  ">
-  <input type="button" name="" value="day" onclick="
-  document.querySelector('body').style.backgroundColor = 'white';
-  document.querySelector('body').style.color = 'black';
+
+  <input id="night_day" type="button" name="" value="night" onclick="
+    if(document.querySelector('#night_day').value === 'night'){
+      document.querySelector('body').style.backgroundColor = 'black';
+      document.querySelector('body').style.color = 'white';
+      document.querySelector('#night_day').value = 'day';
+    } else{
+      document.querySelector('body').style.backgroundColor = 'white';
+      document.querySelector('body').style.color = 'black';
+      document.querySelector('#night_day').value = 'night';
+    }
+
   ">
   <div id="grid">
     <ol>
